--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,11 +16,14 @@ jobs:
 
     - name: Lint
       uses: golangci/golangci-lint-action@v6.0.1
+      with:
+        skip-cache: true
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.23'
+        cache: false
 
     - name: Build
       run: go build -v ./...
